# syzygycomputations

./: .#hilbP1P1_V2.m2  .#relevantRange.m2  .gitignore  Basis.h  BasisTest.cpp  CMakeLists.txt  Combinatorics.cpp  Combinatorics.h  ConstructMatricies.cpp  Makefile  SchurVeronese.m2  SliceMatrix.cpp  TODO  bettiNaive.m2  bettiNumbers-Q2  heatmaps.nb  hilbP1P1_V2.m2  relevantRange.m2  run_with_sage.sh  scratch.m2  syzygy.sage  tests.sage
Code from P2 Project/: #basisSizes.m2#  Hacky_Delete_Duplicates.m2  SchurVeronese.m2  basisSizes.m2  buildAllBetti.m2  schurExamplesPaper.m2  step1.py  step2.m  test.txt  tests-small.m2
HirzebruchSyzygies/: .#conjectures.m2  HirzebruchSyzygies.m2  Schur_Generators.m2  Untitled  bettiF0_1_1_2_4.m2  bettiTablesForPaper.m2  conjectures copy.m2  conjectures-juliette.m2  conjectures-unimodal.m2  conjectures.m2  conjectures_Section_6_1.m2  conjectures_Section_6_2.m2  dataRange.m2  generatingTablesForPaper.m2  heatPlots.m2  monomialSyzygiesExample.m2  postProcessing-monomialDominantWeights.m2  schurExampleForPaper.txt  tablesForPaper11.txt
M2OutputFiles/: bettiF0_0_0_2_4.m2
P1P1Syzygies/: P1P1Syzygies.m2  conjectures_Section_5_1.m2  doc2.m2  duality.m2  getData.py  tests.m2
post-Processing/: Examples_Big_Syzygies_Paper.m2  doc.m2  readme.rtf  schurExamplesPapert.tex  step3.m2  tests.m2
ranksToBetti/: ranksToBetti.py
src/: .#post_p1p1.m2  P1P1_Code.m2  README.txt  compute_betti.py  (+24 more)
src/CreateMatrices/: CMakeLists.txt  ChainMap.h  Combinatorics.cpp  Combinatorics.h  DirectConstructMatrices.cpp  Test.cpp  ToricVariety.cpp  ToricVariety.h
(+5642 files in other folders)
