add_compile_options(-Wall -Wextra -O2)
add_executable (DirectConstructMatrices DirectConstructMatrices.cpp Basis.cpp Combinatorics.cpp ChainMap.cpp ToricVariety.cpp)
target_compile_features (DirectConstructMatrices PUBLIC cxx_std_11)
add_executable(SliceMatrix SliceMatrix.cpp Basis.cpp Combinatorics.cpp )
target_compile_features (SliceMatrix PUBLIC cxx_std_11)
add_executable(ConstructMatrices ConstructMatrices.cpp Basis.cpp Combinatorics.cpp)
target_compile_features (ConstructMatrices PUBLIC cxx_std_11)

include (CTest)
find_package(Catch2)
if (Catch2_FOUND)
  enable_testing()
  include (Catch)
  include (ParseAndAddCatchTests)
  add_executable(Test TestMain.cpp Test.cpp ToricVariety.cpp Combinatorics.cpp Basis.cpp)
  target_compile_features (Test PUBLIC cxx_std_11)
  ParseAndAddCatchTests(Test)
endif()
